--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -17,7 +17,7 @@
             <input type="text" id="username" name="name" value=""><br>
 
             <label id="passwordLabel" for="password">Password</label><br>
-            <input type="text" id="password" name="password" value=""><br><br>
+            <input type="password" id="password" name="password" value=""><br><br>
 
             <button id="buttonLog" type="submit">Login</button>
             <a id="linkLogin" href="./signup.html">Registati qui</a>
