--- a/pages/html/signup.html
+++ b/pages/html/signup.html
@@ -25,7 +25,7 @@
             <input type="password" id="conferma" name="passwordConfirm" value=""><br><br>
 
             <button id="buttonLog" type="submit">Registati</button>
-            <a id="linkLogin" href="./login.html" >Accedi</a>
+            <a id="linkLogin" href="./login.php" >Accedi</a>
           </div>
         </form> 
 
