change button task page

--- a/pages/html/task.html
+++ b/pages/html/task.html
@@ -41,7 +41,7 @@
 
                                 <form action = '../php/controller/controller.php?controller=task&action=addTask' method="POST">
                                   <input type="text" id="myInput" placeholder="Title...">
-                                  <span onclick="newElement()" class="addBtn">Add</span>
+                                  <button onclick="newElement()" class="addBtn">Add</button>
                                 </form>
                                 
                               </div>
